Fixing login form validation issues on IE9
HTML5 form validation is not native in versions IE9 and below. Added a jQuery plugin to add this functionality in older versions.

Also fixed the width of the login fields to span full width.

--- a/app/less/topbar.less
+++ b/app/less/topbar.less
@@ -260,7 +260,27 @@
 
 .form-control, .st-default-search-input {
     background-image:none !important;
-    width:80% !important;
+    width:100% !important;
     line-height: inherit !important;
 }
 
+// Styling for IE9 Form Validation
+.h5form-response {
+	border-right: 10px solid white;
+	border-top: 10px solid transparent;
+	box-shadow: 3px 3px 6px dimgray;
+	margin: 1.6em 0 0 24px;
+	padding: 0;
+	position: absolute;
+	z-index: 1000;
+	p {
+		background: white;
+		border-radius: 8px;
+		box-shadow: 3px 3px 6px dimgray;
+		color: black;
+		float:left;
+		margin: 0 -400px -20px -20px;
+		padding: 10px;
+		text-align: left;
+	}
+}
